# scope-oracle-mapper

./: .gitignore  Cargo.toml  README.md
.github/: test.yml
.github/workflows/: test.yml
cli/: Cargo.toml  new.json  sample.json
cli/src/: main.rs
idl/: scope_mapping.json
program/: Cargo.toml
program/src/: entrypoint.rs  lib.rs
program/src/instruction/: add_mapping.rs  close.rs  initialize.rs
program/tests/: unit.rs
src/: entrypoint.rs  error.rs  lib.rs
src/instruction/: add_mapping.rs  close.rs  initialize.rs  mod.rs
src/state/: mint_mapping.rs  mod.rs  scope_mapping_registry.rs  utils.rs
state/: Cargo.toml
state/src/: lib.rs  mint_mapping.rs  scope_mapping_registry.rs  utils.rs
tests/: test-wallet.json  unit.rs
verifier/: Cargo.toml
verifier/src/: main.rs  sample.json
