[package]
name = "scope-mapping"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = { version = "=0.8.1", features = ["std"] }
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
shank = "0.4.3"

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-owner = []