[workspace]
resolver = "2"
members = [
    "program",
    "state",
    "cli", "verifier",
]

[workspace.package]
version = "1.0.0"


[workspace.lints.rust]
unused_imports = "allow"
unused_mut = "allow"
dead_code = "allow"
unused_macros = "allow"
unused_variables = "allow"


[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
