[package]
name = "verifier"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = "1.0.98"
reqwest = "0.12.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.2.0"
solana-sdk = "2.2.0"
tokio = {version = "1.21.2", features = ["full"]} 
oracle-mapping-state = { path = "../state" }
scope-mapping = { path = "../program" , features = ["no-entrypoint"]}

[lints]
workspace = true
